# OpenQuant

./: .env.india.example  .gitignore  BASELINES.md  CLAUDE.md  CODEX_CODING_HARNESS.md  CODEX_PAPER_TRADING_HARNESS.md  INDIA_ADAPTATION.md  INDIA_BASELINE.md  README.md  REGIME_OVERLAY_PLAYBOOK.md  openquant.toml  paper_trade.py  refresh_dashboard.sh  requirements.txt  run.sh  run_live.py  run_live_crypto.py  save_results.py
.claude/: settings.json
.githooks/: pre-commit
autoresearch/: .gitignore  AUTORESEARCH_LOOP.md  LEARNINGS.md  NOTEBOOK.md  NOTEBOOK_basket.md  ORACLE_SPEC.md  PAIR_PICKER_CONSUMER_CONTRACT.md  PLAN.md  RESEARCH_NOTES.md  RUN_REVIEW_TEMPLATE.md  SPEC.md  analyze_pnl.py  build_foundation_dataset.py  dataset.py  metals_findings.md  metals_results.tsv  pattern_research.md  prepare.py  program.md  pyproject.toml  research_brain.md  research_program.md  results.tsv  train.py
config/: BASELINES.md  basket_universe.toml  basket_universe_buildout.toml  basket_universe_india.template.toml  basket_universe_v1.toml  basket_universe_v1_faang_baseline.toml  basket_universe_v1_faang_t15m.toml  basket_universe_v1_faang_t30m.toml  basket_universe_v1_faang_t5m.toml  basket_universe_v1_no_megacaps.toml  basket_universe_v1_no_megacaps_dom050.toml  basket_universe_v1_no_mining.toml  basket_universe_v1_no_mining_baseline.toml  basket_universe_v1_no_mining_dom040.toml  basket_universe_v1_no_mining_dom050.toml  basket_universe_v1_no_mining_dom055.toml  basket_universe_v1_no_mining_dom065.toml  basket_universe_v1_no_mining_dom070.toml  basket_universe_v1_no_mining_dom080.toml  basket_universe_v1_no_mining_statgate2_adf_only.toml  basket_universe_v1_no_mining_statgate2_both.toml  basket_universe_v1_no_mining_statgate2_dom_only.toml  basket_universe_v1_no_mining_t15m.toml  basket_universe_v1_no_mining_t30m.toml  basket_universe_v1_no_mining_t5m.toml  basket_universe_v1_random9_seed0.toml  basket_universe_v1_random9_seed1.toml  basket_universe_v1_random9_seed2.toml  basket_universe_v1_random9_seed3.toml  basket_universe_v1_random9_seed4.toml  basket_universe_v1_trimmed.toml  basket_universe_v2.toml  metals.toml  metals_force.toml  pairs.toml  runner.india.toml  runner.toml  single.toml  test.toml
dashboard/: app.py  queries.py
data/: active_pairs.json  backfill.py  backtest_history.json  daily_pnl.json  dashboard.html  dashboard_data.json  earnings_calendar.json  experiment_bars_20260113.json  experiment_bars_20260114.json  experiment_bars_20260115.json  experiment_bars_20260116.json  experiment_bars_20260120.json  experiment_bars_20260121.json  experiment_bars_20260122.json  experiment_bars_20260123.json  experiment_bars_20260126.json  experiment_bars_20260127.json  experiment_bars_20260128.json  experiment_bars_20260129.json  experiment_bars_20260130.json  experiment_bars_20260202.json  experiment_bars_20260203.json  experiment_bars_20260204.json  experiment_bars_20260205.json  experiment_bars_20260206.json  experiment_bars_20260209.json  experiment_bars_20260210.json  experiment_bars_20260211.json  experiment_bars_20260212.json  experiment_bars_20260213.json  experiment_bars_20260217.json  experiment_bars_20260218.json  experiment_bars_20260219.json  experiment_bars_20260220.json  experiment_bars_20260223.json  experiment_bars_20260224.json  experiment_bars_20260225.json  experiment_bars_20260226.json  experiment_bars_20260227.json  experiment_bars_20260302.json  (+27 more)
docs/: CAPITAL_POLICY.md  debugging_learnings.md  (+4 more)
engine/crates/basket-engine/: Cargo.toml
engine/crates/basket-engine/src/: engine.rs  intent.rs  lib.rs  portfolio.rs  state.rs
engine/crates/basket-engine/src/gates/: mod.rs
engine/crates/basket-picker/: Cargo.toml
engine/crates/basket-picker/benches/: basket_bench.rs
engine/crates/basket-picker/src/: adf.rs  bertram.rs  dominance.rs  lib.rs  ou.rs  schema.rs  spread.rs  test_utils.rs  universe.rs  validator.rs
engine/crates/basket-picker/tests/: parity_with_quant_lab.rs
engine/crates/core/: Cargo.toml
engine/crates/core/benches/: hot_path.rs
engine/crates/core/src/: backtest.rs  capital_metrics.rs  config.rs  engine.rs  exit.rs  features.rs  hot_metrics.rs  lib.rs  market_data.rs  portfolio.rs  risk.rs  signals.rs
engine/crates/core/src/features/: adx.rs  cusum.rs  donchian.rs  ema.rs  garch.rs  mod.rs  reftest.rs  reftest_fixtures.json  regime.rs  ring_buf.rs  rolling_stats.rs  sma.rs  vwap.rs
engine/crates/core/src/pairs/: active_pairs.rs  engine.rs  mod.rs  shadow.rs
engine/crates/core/src/signals/: breakout.rs  combiner.rs  mean_reversion.rs  mod.rs  momentum.rs  vwap_reversion.rs
engine/crates/core/tests/: BASELINE.md  bench_gate.rs  config_data_contract.rs  integration_pairs.rs  load_test.rs  regime_gate.rs
engine/crates/metrics/: Cargo.toml
engine/crates/metrics/benches/: metrics_overhead.rs
engine/crates/metrics/src/: handles.rs  lib.rs  recorder.rs  sink.rs
engine/crates/oracle/: Cargo.toml
engine/crates/oracle/src/: main.rs
engine/crates/pair-picker/: Cargo.toml
engine/crates/pair-picker/benches/: stats_bench.rs
engine/crates/pair-picker/src/: daily_scanner.rs  etf_filter.rs  graph.rs  lib.rs  lockfile.rs  main.rs  pipeline.rs  regime.rs  scorer.rs  sensitivity.rs  test_utils.rs  thompson.rs  types.rs  walk_forward.rs
engine/crates/pair-picker/src/stats/: adf.rs  beta_stability.rs  halflife.rs  mod.rs  ols.rs
engine/crates/pair-picker/tests/: integration_pipeline.rs
engine/crates/pybridge/: Cargo.toml
engine/crates/pybridge/src/: lib.rs
engine/crates/runner/: Cargo.toml
engine/crates/runner/src/: alpaca.rs  bar_cache.rs  bar_source.rs  bars.rs  basket_fits.rs  basket_journal.rs  basket_live.rs  basket_overlay_picker.rs  basket_runner.rs  broker.rs  clock.rs  earnings.rs  intents.rs  kite.rs  main.rs  market_session.rs  pair_picker_service.rs  parity.rs  parquet_bar_source.rs  pnl.rs  refresh.rs  replay_clock.rs  replay_report.rs  session_trigger.rs  simulated_broker.rs  stream.rs  trade_report.rs
engine/crates/runner/tests/: integration.rs  live_mode.rs  live_smoke.rs  pnl_multi_pair.rs
(+305 files in other folders)
