[package]
name = "basket-engine"
version = "0.1.0"
edition = "2021"
description = "Per-basket runtime engine with Bertram symmetric state machine"

[lib]
name = "basket_engine"
path = "src/lib.rs"

[dependencies]
basket-picker = { path = "../basket-picker" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
