[package]
name = "basket-picker"
version = "0.1.0"
edition = "2021"
description = "Validation library for basket trading candidates — OU/AR(1) fit, Bertram thresholds"

[lib]
name = "basket_picker"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
rand = "0.8"

[[bench]]
name = "basket_bench"
harness = false
