[package]
name = "openquant-core"
version = "0.1.0"
edition = "2024"

[dependencies]
metrics = "0.24"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1"
tempfile = "3"

[[bench]]
name = "hot_path"
harness = false
