[package]
name = "openquant-metrics"
version = "0.1.0"
edition = "2024"

[dependencies]
metrics = "0.24"
metrics-util = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "sync", "time", "fs", "io-util", "macros"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "fs", "io-util", "macros"] }

[[bench]]
name = "metrics_overhead"
harness = false
