[package]
name = "oracle"
version = "0.1.0"
edition = "2024"
description = "Brute-force pair replay oracle — ground truth for autoresearch"

[[bin]]
name = "oracle"
path = "src/main.rs"

[dependencies]
openquant-core = { path = "../core" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
arrow = "54"
parquet = "54"
clap = { version = "4", features = ["derive"] }
rayon = "1.10"
