[package]
name = "pair-picker"
version = "0.1.0"
edition = "2021"
description = "Statistical validation binary for pairs trading candidate selection"

[[bin]]
name = "pair-picker"
path = "src/main.rs"

[lib]
name = "pair_picker"
path = "src/lib.rs"

[features]
test-support = []

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
rand = "0.8"

[[bench]]
name = "stats_bench"
harness = false
