[package]
name = "openquant"
version = "0.1.0"
edition = "2024"

[lib]
name = "openquant"
crate-type = ["cdylib"]

[dependencies]
openquant-core = { path = "../core" }
openquant-journal = { path = "../journal" }
openquant-metrics = { path = "../metrics" }
pyo3 = { version = "0.24", features = ["extension-module"] }
serde_json = "1"
