[package]
name = "openquant"
version = "0.1.0"
edition = "2024"

[lib]
name = "openquant"
crate-type = ["cdylib"]

[dependencies]
openquant-core = { path = "../core" }
openquant-journal = { path = "../journal" }
pair-picker = { path = "../pair-picker" }
pyo3 = { version = "0.24", features = ["extension-module"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
