[package]
name = "openquant-runner"
version = "0.1.0"
edition = "2021"
description = "Standalone trading engine binary — reads bars from JSON, writes order intents"

[[bin]]
name = "openquant-runner"
path = "src/main.rs"

[dependencies]
openquant-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
